# silver-waffle

./: .gitignore  Doxyfile.in  Makefile.am  README.md  configure.ac  project.bash  valgrind-profile.sh
3d-models/: AlienStructureDevice.blend  AlienStructureDevice.dae  AlienStructureResearchLab.blend  AlienStructureResearchLab.dae  AlienStructureSpawnerVertical.blend  AlienStructureSpawnerVertical.dae  AlienStructureTower.blend  AlienStructureTower.dae  BasicShapes.blend  Bomb.blend  Bomb.dae  BombAmmo.blend  BombAmmo.dae  BonusCylinder.blend  BonusCylinder.dae  BonusLevelEntrance.blend  BonusLevelEntrance.dae  Cloud1.blend  Cloud1.dae  Cloud1.json  Cloud2.blend  Cloud2.dae  Container.blend  Container.dae  Cube.dae  EngineExhaust.blend  EngineExhaust.dae  Human.blend  Human.dae  Invader1.blend  Invader1.dae  Invader1.json  Invader2.blend  Invader2.dae  InvaderWarpFuelCarrier.blend  InvaderWarpFuelCarrier.dae  LevelEntrance.blend  LevelEntrance.dae  LevelEntrance.json  Makefile.am  (+33 more)
Data/: AttackWaves.json  Buildings.json  Highscores.json  Invaders.json  Level-Bonus.json  Level-Earth.json  Level-Jupiter.json  Level-Mercury.json  Level-Planet-Earth.json  Level-Planet-Jupiter.json  Level-Planet-Mars.json  Level-Planet-Mercury.json  Level-Planet-Neptune.json  Level-Planet-Saturn.json  Level-Planet-Uranus.json  Level-Planet-Venus.json  Level-Planet.json  Level-Uranus.json  Level-Venus.json  Loot-Boss1.json  Loot-Container.json  Loot-ContainerExtra.json  Loot-Invader1.json  Loot-SpaceshipUpgradeBlueprints.json  Loot-WarpFuel.json  Makefile.am  Plot-Title-0.txt  Plot-Title-1.txt  Plot-Title-2.txt  Plot-Title-3.txt  Plot-Title-5.txt  Sfx.json  Shaders.json  SolarSystemObjects.json  Songs.json
Fonts/bitstream-vera-sans-mono-fonts/: Makefile.am
Images/: BonusIcons.xcf  Button.xcf  Buttons.xcf  Checkmark-Green.xcf  GameOverlay.xcf  Level-Planet-Earth.xcf  Level-Planet-Jupiter.xcf  Level-Planet-Mars.xcf  Level-Planet-Neptune.xcf  Level-Planet-Saturn.xcf  Level-Planet-Uranus.xcf  Level-Planet-Venus.xcf  Makefile.am  PanelBorders.xcf  Plasma.xcf  Projectile.xcf  UpgradeMaterial.xcf  WeaponBoostLiquidIcons.xcf  White.xcf
Shaders/: AdditiveBlending.frag  AdditiveBlending.vert  Explosion.frag  Explosion.vert  Flat.frag  Flat.vert  Font.frag  Font.vert  FunctionDirectionalLight.frag  GaussianBlur.frag  GaussianBlur.vert  Generic-Color.frag  Generic-Color.vert  Generic-ColorTexture.frag  Generic-ColorTexture.vert  Generic-Texture-BlendDiscard.frag  Generic-Texture.frag  Generic-Texture.vert  Makefile.am  Mask.frag  Mask.vert  ProgressBar.frag  ProgressBar.vert  SceneObject-Color.frag  SceneObject-Color.vert  SceneObject.frag  SceneObject.geom  SceneObject.vert  ScoreReel.frag  ScoreReel.vert  Spaceship.frag  Spaceship.vert  Star.frag  Star.geom  Star.vert  StarLines.geom  generate-variants.sh  includes.awk
Shaders/Include/: Constants.glsl  Data.glsl  DirectionalLight.frag  Input.frag  Input.geom  Input.vert  Makefile.am  Output.frag  Output.geom  Output.vert  Uniforms.glsl
Shaders/src/: Cloud.frag
Sounds/: Makefile.am  Weapon1.sbp  Weapon2.sbp  Weapon3.sbp  alien.sbp  collect.valuable.sbp  drop_bomb.sbp  engine.sbp  explosion.big.sbp  explosion.small.sbp  explosion.tiny.sbp  human_jump.sbp  weapon.sbp
m4/: ax_cxx_compile_stdcxx.m4
src/: AStar.cc  AStar.hh  AdditiveBlending.cc  AdditiveBlending.hh  BonusLevel.cc  BonusLevel.hh  Camera.cc  Camera.hh  Camera2.cc  Camera2.hh  CollisionShape.cc  CollisionShape.hh  CollisionShapeOBB.cc  CollisionShapeOBB.hh  CollisionShapeSphere.cc  CollisionShapeSphere.hh  Component.cc  Component.hh  Controller.cc  Controller.hh  ControllerPlanet.cc  ControllerPlanet.hh  ControllerSpace.cc  ControllerSpace.hh  Explosion.cc  Explosion.hh  Font.cc  Font.hh  Frustum.cc  Frustum.hh  GLM.cc  GLM.hh  GPUObject.hh  GameLevel.cc  GameLevel.hh  GameState.cc  GameState.hh  GameStateBonusLevel.cc  GameStateBonusLevel.hh  GameStateGame.cc  (+200 more)
