tdmodelsdir = $(pkgdatadir)/3d-models

tdmodels_DATA = \
	AlienStructureDevice.dae		\
	AlienStructureSpawnerVertical.dae	\
	AlienStructureTower.dae			\
	BonusCylinder.dae			\
	Cloud1.dae				\
	Cloud2.dae				\
	Container.dae				\
	Cube.dae				\
	EngineExhaust.dae			\
	Human.dae				\
	Invader1.dae				\
	Invader2.dae				\
	InvaderWarpFuelCarrier.dae		\
	LevelEntrance.dae			\
	OrganicCube.dae				\
	Planet.dae				\
	PlayerBase.dae				\
	Player.dae				\
	Projectile.dae				\
	ProjectilePlasma.dae			\
	ScoreBonus.dae				\
	ScoreReelDrum.dae			\
	Sphere.dae				\
	UpgradeMaterial.dae			\
	WarpFuel.dae			

EXTRA_DIST = $(tdmodels_DATA)
