tdmodelsdir = $(pkgdatadir)/3d-models

tdmodels_DATA = \
	AlienStructureDevice.dae		\
	AlienStructureSpawnerVertical.dae	\
	AlienStructureTower.dae			\
	BonusCylinder.dae			\
	Cloud1.dae				\
	Cloud1.json				\
	Cloud2.dae				\
	Cloud2.json				\
	Container.dae				\
	Cube.dae				\
	EngineExhaust.dae			\
	EngineExhaust.json			\
	HalfSphere.dae				\
	HalfSphere.json				\
	Human.dae				\
	Invader1.dae				\
	Invader2.dae				\
	InvaderWarpFuelCarrier.dae		\
	LevelEntrance.dae			\
	LevelEntrance.json			\
	OrganicCube.dae				\
	Planet.dae				\
	Player.dae				\
	PlayerBase.dae				\
	Projectile.dae				\
	ProjectilePlasma.dae			\
	Saucer1.dae				\
	ScoreBonus.dae				\
	ScoreReelDrum.dae			\
	Sphere.dae				\
	UpgradeMaterial.dae			\
	WarpFuel.dae				\
	WarpFuel.json				

EXTRA_DIST = $(tdmodels_DATA)
