datafilesdir = $(pkgdatadir)/Data

datafiles_DATA = 				\
	Buildings.json				\
	Invaders.json				\
	Level-Earth.json			\
	Level-Jupiter.json			\
	Level-Mars.json				\
	Level-Mercury.json			\
	Level-Neptune.json			\
	Level-Planet-Earth.json			\
	Level-Planet-Jupiter.json		\
	Level-Planet-Mars.json			\
	Level-Planet-Mercury.json		\
	Level-Planet-Neptune.json		\
	Level-Planet-Saturn.json		\
	Level-Planet-Uranus.json		\
	Level-Planet-Venus.json			\
	Level-Saturn.json			\
	Level-Uranus.json			\
	Level-Venus.json			\
	Loot-Boss1.json				\
	Loot-ContainerExtra.json		\
	Loot-Container.json			\
	Loot-Invader1.json			\
	Loot-WarpFuel.json			\
	Plot-Title-0.txt			\
	Plot-Title-1.txt			\
	Plot-Title-2.txt			\
	Plot-Title-3.txt			\
	Plot-Title-4.txt			\
	Plot-Title-5.txt			\
	Plot-Title-6.txt			\
	SolarSystemObjects.json			
