imagesdir = $(pkgdatadir)/Images

2k_neptune-low.jpg : 2k_neptune.jpg
	$(AM_V_GEN) $(CONVERT) $< -scale 10% $@

2k_uranus-low.jpg : 2k_uranus.jpg
	$(AM_V_GEN) $(CONVERT) $< -scale 10% $@

4k_venus_atmosphere-low.jpg : 4k_venus_atmosphere.jpg
	$(AM_V_GEN) $(CONVERT) $< -scale 10% $@

8k_earth_daymap-low.jpg : 8k_earth_daymap.jpg
	$(AM_V_GEN) $(CONVERT) $< -scale 10% $@

8k_jupiter-low.jpg : 8k_jupiter.jpg
	$(AM_V_GEN) $(CONVERT) $< -scale 10% $@

8k_mars-low.jpg : 8k_mars.jpg
	$(AM_V_GEN) $(CONVERT) $< -scale 10% $@

8k_mercury-low.jpg : 8k_mercury.jpg
	$(AM_V_GEN) $(CONVERT) $< -scale 10% $@

8k_saturn-low.jpg : 8k_saturn.jpg
	$(AM_V_GEN) $(CONVERT) $< -scale 10% $@

8k_stars_milky_way-low.jpg : 8k_stars_milky_way.jpg
	$(AM_V_GEN) $(CONVERT) $< -scale 10% $@

8k_saturn_ring_alpha-low.png : 8k_saturn_ring_alpha.png
	$(AM_V_GEN) $(CONVERT) $< -scale 10% $@

8k_sun-low.jpg: 8k_sun.jpg
	$(AM_V_GEN) $(CONVERT) $< -scale 10% $@

images_DATA = \
	2k_neptune.jpg			\
	2k_neptune-low.jpg		\
	2k_uranus.jpg			\
	2k_uranus-low.jpg		\
	4k_venus_atmosphere.jpg		\
	4k_venus_atmosphere-low.jpg	\
	8k_earth_daymap.jpg		\
	8k_earth_daymap-low.jpg		\
	8k_jupiter.jpg			\
	8k_jupiter-low.jpg		\
	8k_mars.jpg			\
	8k_mars-low.jpg			\
	8k_mercury.jpg			\
	8k_mercury-low.jpg		\
	8k_saturn.jpg			\
	8k_saturn-low.jpg		\
	8k_saturn_ring_alpha.png	\
	8k_saturn_ring_alpha-low.png	\
	8k_stars_milky_way.jpg		\
	8k_stars_milky_way-low.jpg	\
	8k_sun.jpg			\
	8k_sun-low.jpg			\
	BonusIcon-2xScore.png		\
	BonusIcon-Shield.png		\
	Checkmark-Green.png		\
	Level-Planet-Earth.png		\
	Level-Planet-Jupiter.png	\
	Level-Planet-Mars.png		\
	Level-Planet-Mercury.png	\
	Level-Planet-Neptune.png	\
	Level-Planet-Saturn.png		\
	Level-Planet-Uranus.png		\
	Level-Planet-Venus.png		\
	PanelBorders.png		\
	Plasma.png			\
	Projectile.png			\
	UpgradeMaterial.png		\
	WeaponBoostLiquid.png		\
	WeaponBoostLiquidActive.png	\
	White.png			


CLEANFILES = \
	2k_neptune-low.jpg		\
	2k_uranus-low.jpg		\
	4k_venus_atmosphere-low.jpg	\
	8k_earth_daymap-low.jpg		\
	8k_jupiter-low.jpg		\
	8k_mars-low.jpg			\
	8k_mercury-low.jpg		\
	8k_saturn-low.jpg		\
	8k_saturn_ring_alpha-low.png	\
	8k_stars_milky_way-low.jpg	\
	8k_sun-low.jpg

EXTRA_DIST = \
	2k_neptune.jpg			\
	2k_uranus.jpg			\
	4k_venus_atmosphere.jpg		\
	8k_earth_daymap.jpg		\
	8k_jupiter.jpg			\
	8k_mars.jpg			\
	8k_mercury.jpg			\
	8k_saturn.jpg			\
	8k_saturn_ring_alpha.png	\
	8k_stars_milky_way.jpg		\
	8k_sun.jpg			\
	BonusIcon-2xScore.png		\
	BonusIcon-Shield.png		\
	Checkmark-Green.png		\
	Level-Planet-Earth.png		\
	Level-Planet-Jupiter.png	\
	Level-Planet-Mars.png		\
	Level-Planet-Mercury.png	\
	Level-Planet-Neptune.png	\
	Level-Planet-Saturn.png		\
	Level-Planet-Uranus.png		\
	Level-Planet-Venus.png		\
	PanelBorders.png		\
	Plasma.png			\
	Projectile.png			\
	UpgradeMaterial.png		\
	WeaponBoostLiquid.png		\
	WeaponBoostLiquidActive.png	\
	White.png			
