shadersdir = $(pkgdatadir)/Shaders


shaders_DATA = \
	AdditiveBlending.frag		\
	AdditiveBlending.vert		\
	Explosion.frag			\
	Explosion.vert			\
	Font.frag			\
	Font.vert			\
	GaussianBlur.frag		\
	GaussianBlur.vert		\
	Generic-Color.frag		\
	Generic-ColorTexture.frag	\
	Generic-ColorTexture.vert	\
	Generic-Color.vert		\
	Generic-Texture.frag		\
	Generic-Texture.vert		\
	Mask.frag			\
	Mask.vert			\
	ProgressBar.frag		\
	ProgressBar.vert		\
	SceneObject.frag		\
	SceneObject.geom		\
	SceneObject.vert		\
	Star.frag			\
	Star.geom			\
	StarLines.geom			\
	Star.vert			


EXTRA_DIST = $(shaders_DATA)
